--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
             이름: 김다연<br>
             관심분야: IT<br>
             희망직업: 정보관련직종 <br>
-
+            <img src=https://opgg-com-image.akamaized.net/attach/images/20200604080151.1182678.jpg> <br>
+            이미지출처: https://talk.op.gg/s/lol/free/2379614/%EA%B3%A0%EC%96%91%EC%9D%B4-%EB%AA%A8%EC%9D%8C%EC%A7%91 <br>
         <h3>내가 모은 신문기사</h3>
     </body>
 </html> 
