--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
             희망직업: 정보관련직종 <br>
             <img src=https://opgg-com-image.akamaized.net/attach/images/20200604080151.1182678.jpg> <br>
             이미지출처: https://talk.op.gg/s/lol/free/2379614/%EA%B3%A0%EC%96%91%EC%9D%B4-%EB%AA%A8%EC%9D%8C%EC%A7%91 <br>
+        
         <h3>내가 모은 신문기사</h3>
+            <a href = 'https://hiclass.hannam.ac.kr/courses/37993/assignments/619197/submissions/54275?download=3996006' target = '_blank'> 신문기사 1 </a>
+<a href = 'https://hiclass.hannam.ac.kr/courses/37993/assignments/621372/submissions/54275?download=4009586' target = '_blank'> 신문기사 2 </a>
+<a href = 'https://hiclass.hannam.ac.kr/courses/37993/assignments/625151/submissions/54275?download=4026426' target = '_blank'> 신문기사 3 </a>
+<a href = 'https://hiclass.hannam.ac.kr/courses/37993/assignments/627814/submissions/54275?download=4044011' target = '_blank'> 신문기사 4 </a>
+<a href = 'https://hiclass.hannam.ac.kr/courses/37993/assignments/629455/submissions/54275?download=4064772' target = '_blank'> 신문기사 5 </a>
+<a href = 'https://hiclass.hannam.ac.kr/courses/37993/assignments/634845/submissions/54275?download=4112542' target = '_blank'> 신문기사 6 </a>
+<a href = 'https://hiclass.hannam.ac.kr/courses/37993/assignments/634846/submissions/54275?download=4127308' target = '_blank'> 신문기사 7 </a>
+<a href = 'https://hiclass.hannam.ac.kr/courses/37993/assignments/637018/submissions/54275?download=4142184' target = '_blank'> 신문기사 8 </a>
+<a href = 'https://hiclass.hannam.ac.kr/courses/37993/assignments/637021/submissions/54275?download=4158801' target = '_blank'> 신문기사 9 </a>
     </body>
 </html> 
